# WHOAREYOU

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.ps1  pyproject.toml  requirements.txt  run.py  serve.py  setup.iss  whoareyou.spec
app/: api.py  api_status.py  ats.py  commute.py  config.py  crawler.py  db.py  dedup.py  deps.py  geo_kakao.py  geo_odsay.py  jobfilter.py  jobplanet_client.py  jotso_client.py  kakao_notifier.py  main.py  matcher.py  models.py  notifier.py  ocr.py  pipeline.py  reranker.py  scheduler.py  scoring.py  skills.py  store.py  user_settings.py
app/analysis/: ats.py  categories.py  cover_letter.py  document.py  emotion.py  keywords.py  resume_text.py
app/companies/: community.py  dart.py  discover.py  geocode.py  pipeline.py  playwright_research.py  research.py  sentiment.py
app/crawler/: browser.py  extractor.py  jd_fetcher.py  llm.py  llm_catalog.py  pipeline.py  strategies.py  vision_fallback.py
app/crawler/adapters/: base.py  (+4 more)
app/geo/: distance.py  kakao.py  odsay.py
app/routes/: api_companies.py  api_crawl.py  api_dashboard.py  api_jobs.py  api_ollama.py  api_resume.py  pages.py  ws_progress.py
app/ui/: api_status.py  progress_bus.py  settings_store.py
app/workers/: arq_settings.py  tasks.py
scripts/: dump_saramin_mobile.py  dump_saramin_v2.py  dump_search.py  fix_encoding.py  test_adapters.py
static/js/: app.js
templates/: base.html  companies.html  company.html  crawl.html  index.html  job_detail.html  jobs.html  map.html  placeholder.html  resume.html  resumes.html  settings.html
web/: app.js  index.html
(+1 files in other folders)
