[project]
name = "whoareyou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "arq>=0.28.0",
    "cssselect>=1.4.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "kiwipiepy>=0.23.1",
    "markitdown[docx,pdf,pptx]>=0.0.1a3",
    "ollama>=0.6.2",
    "playwright>=1.46",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.29",
    "rapidfuzz>=3.14.5",
    "readability-lxml>=0.8.4.1",
    "redis>=5.3.1",
    "sqlmodel>=0.0.38",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.47.0",
]
